--- a/src/pages/user/styles/Coupon 2.scss
+++ b/src/pages/user/styles/Coupon 2.scss
@@ -6,9 +6,7 @@
     border-left: 25px solid #000;
 }
 
-.u-couponTitle > p{
-    font-family: NotoSansTC-Medium;
-    font-size: 24px;
+.u-couponTitle > h3{
     margin-top: 30px;
     margin-left: 20px;
 }
@@ -16,11 +14,9 @@
 .u-couponDate, .u-couponText{
     margin-left: 20px;
     margin-top: 10px;
-    font-family: NotoSansTC-Medium;
-    font-size: 16px;
 }
 
-.u-SNnumbox > p[type="copy"] {
+.u-SNnumbox > h3[type="copy"] {
     width: 150px;
     height: 50px;
     border: 2px solid #000;
@@ -28,12 +24,7 @@
     background-color: #e8e8e8;
     text-align: center;
     line-height: 45px;
-    font-size: 20px;
 }
-
-// .u-cobyBtn {
-//     margin-left: 100px;
-// }
 
 .u-cobyBtn > button {
     width: 150px;
@@ -42,6 +33,5 @@
     margin-top: 10px;
     background-color: #000;
     color: #fff;
-    font-family: NotoSansTC-Medium;
-    font-size: 16px;
+    font-size: 18px;
 }
