--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -159,21 +159,22 @@
 .u-form > input {
   margin-top: 20px;
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 16px;
-}
-
-.u-form > input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px #e8e8e8 inset;
+  font-size: 1rem;
+  border-radius: 0px;
+  &:focus {
+    outline: none !important;
+    border: 2px solid #1d0aff;
+    background-color: #e8e8e8;
+  }
 }
 
 // ===== checkbox 樣式 =====
 .u-checkbox > input[type='checkbox'] {
+  border-radius: 0px;
   margin-right: 15px;
   cursor: pointer;
   font-size: 14px;
@@ -193,7 +194,6 @@ select:-webkit-autofill {
   display: inline-block;
   visibility: visible;
   padding: 0px 4px;
-  border-radius: 3px;
   border: 2px solid #000;
 }
 
