--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -27,13 +27,13 @@
 
 .u-progress{
     margin-top: 20px;
-    width: 100%;
-    height: 55px;
+    width: 14vw;
+    height: 50px;
     font-size: 1.5rem;
     font-weight: normal;
     border: 2px solid black;
-    text-align: center;
-    line-height: 52px;
+    // text-align: center;
+    line-height: 47px;
 }
 
 .u-progress > div{
@@ -67,7 +67,7 @@
 /* ----- 訂單 ----- */
 .u-table {
     margin-top: 20px;
-    width: 1044px;
+    width: 100%;
     height: 195px;
     border: 2px solid #707070;
     font-size: 16px;
@@ -84,9 +84,9 @@
 /* ----- 取消 btn ----- */
 .u-Lbtn > .btn-light {
     margin-bottom: 20px;
-    width: 150px;
+    width: 10vw;
     height: 50px;
-    font-size: 18px;
+    font-size: 1.5rem;
     font-family: 'Noto Sans TC', sans-serif;
     color: #000;
     background-color: #e8e8e8;
@@ -106,10 +106,10 @@
 /* ----- 詳細資料 btn ----- */
 
 .u-Bbtn > .btn-dark {
-    width: 150px;
+    width: 10vw;
     height: 50px;
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 18px;
+    font-size: 1.5rem;
     /* margin-left: 150px; */
     color: #fff;
     background-color: #000;
