--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -1,5 +1,5 @@
 .u-ticbox{
-    width: 1045px;
+    width: 100%;
     height: 260px;
     border: 2px solid #000;
     border-top: 25px solid #000;
@@ -85,6 +85,7 @@
     top: 135px;
     right: 50px;
     font-size: 18px;
+    border-radius: 0px;
   }
 
   .u-link2 {
@@ -94,11 +95,3 @@
   .u-link2:hover{
     color:#000;
   }
-
-  // .u-link3 {
-  //   color: #fff;
-  // }
-
-  // .u-link3:hover{
-  //   color:#fff;
-  // }
