--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -50,7 +50,7 @@
 
 /* =====btn 自訂顏色===== */
 .u-editBtn > .btn-outline-dark {
-  margin-left: 190px;
+  margin-left: 12vw;
   margin-bottom: 30px;
   width: 130px;
   height: 50px;
@@ -75,10 +75,14 @@
   
 }
 
+.u-userData {
+  margin-left: 18vw;
+}
+
 // ----- input 樣式 -----
 .u-form1 > input {
   width: 50%;
-  height: 60px;
+  height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   font-family: 'Noto Sans TC', sans-serif;
@@ -94,7 +98,7 @@
 
 .u-form1 > select {
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   font-family: 'Noto Sans TC', sans-serif;
@@ -110,12 +114,12 @@
 
 .u-Select > select {
   width: 17vw;
-  height: 60px;
+  height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   margin-bottom: 20px;
   margin-top: 5px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: normal;
 }
 
