--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -286,7 +286,10 @@ font-family: notoSansTC-Medium;
 }
 .proDe-1{
     margin-right: 20px;
+    color: white;
 }
 .proDe-2{
     margin-left: 20px;
+    color: white;
+
 }
