--- a/src/pages/Auction/style/auctionDetail.scss
+++ b/src/pages/Auction/style/auctionDetail.scss
@@ -21,30 +21,44 @@ time, mark, audio, video {
 
 /* *{
     outline:1px red solid;
-} */
+}  */
+
+body::-webkit-scrollbar {
+    display: none;
+}
 
 .auctionDetailContent{
     display: flex;
     width:calc(100% - 70px);
+    height: 100%;
 }
 
 .auctionDetailleftContent{
     background-color: #000;
     background-size: cover;
-    /* width:50%; */
     width: 50%;
+    height: 88vh;
     color:white;
+    /* padding: 0 0 12rem 0; */
+    overflow-y: scroll;
+    position: relative;
+}
+
+::-webkit-scrollbar {
+    /*隐藏滚轮*/
+    display: none;
 }
 
 .leftContent_firstpart {
-    padding-left: 47px;
+    padding-left: 10%;
     border-bottom: 1px solid #707070;
-    padding-bottom:14px;
+    padding-bottom:1rem;
+    margin-top:10%;
 }
-
+/* 
 #auctionDetailLOGO{
     margin-top:45px;
-}
+} */
 
 .auctionDetailBreadcrumb{
     color:#fff;
@@ -53,7 +67,7 @@ time, mark, audio, video {
 }
 
 .leftContent_secondpart{
-    padding-left: 47px;
+    padding-left: 10%;
     border-bottom: 1px solid #707070;
     padding-bottom: 40px;
 }
@@ -67,82 +81,84 @@ time, mark, audio, video {
     margin-top: 41px;
 }
 
-.leftContent_thirdpart{
-    padding-left: 47px;
-    border-bottom: 1px solid #707070;
-    padding-bottom: 45px;
+.auc-switch-buttom{
+    background-color: rgba(0, 0, 0, 0);
+    border:0px;
+    padding: 0;
+    color:#fff;
+    width: 100%;
+    padding:20px 0 20px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
-.auctionDetailProductDesTitle{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 10%;
+.auctionDetailProductswitchTitle{
+    margin: 0 10% 0 0;
     font-size: 20px;
-    display: flex;
-    justify-content:space-between;
+}
+
+/* 第三區 */
+.leftContent_thirdpart{
+    padding-left: 10%;
+    border-bottom: 1px solid #707070;
 }
 
 .auctionDetailProductDesContent{
-    margin-right: 10%;
+    margin: 0 10% 10% 0;
     font-size: 16px;
     color:#707070;
 }
 
+/* 第四區 */
 .leftContent_forthpart{
-    padding-left: 47px;
+    padding-left: 10%;
     border-bottom: 1px solid #707070;
+    box-shadow:rgba(0, 0, 0, 0)
 }
 
-.auctionSpecification{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 10%;
-    font-size: 20px;
-    display: flex;
-    justify-content:space-between;
-}
-
+/*第五區*/
 .leftContent_fifthpart{
-    padding-left: 47px;
+    padding-left: 10%;
     border-bottom: 1px solid #707070;
 }
 
-.priceRecord{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 10%;
-    font-size: 20px;
-    display: flex;
-    justify-content:space-between;
-}
+/* .auc-vh{
+    height: 90vh;
+    width: 50%;
+} */
 
 .rightContentFix{
-    position: relative;
-    height: 100vh;
+    /* position: relative; */
+    height: 88vh;
+    /* padding: 0 0 10px 0; */
+    width: 50%;
 }
 
 .auctionDetailrightContent{
-    width: calc(50% - 35px);
-    padding-top: 30px;
+    /* width: calc(50% - 35px); */
+    padding: 3% 0 3% 0;
     display: flex;
     flex-direction: column;
     align-items:center ;
-    position: fixed;
+    height: 100%;
+    /* position: fixed; */
 }
 
 .auctionDetailcountdown{
-    font-size: 25px;
+    font-size: 1.5rem;
+    font-family: 'Noto Sans CJK TC';
+    font-weight: 600;
 }
 
 .auctionDetailcountdown span{
-    font-size: 40px;
+    font-size: 3rem;
 }
 
 
 .auctionDetailPicture{
-    margin-top: 20px;
+    margin-top: 6%;
     width: 60%;
-    max-height:500px;
+    max-height:60%;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -155,8 +171,8 @@ time, mark, audio, video {
 }
 
 .auctionDetailcurrentPriceInput{
-    margin-top: 30px;
-    height: 110px;
+    margin-top: 3%;
+    height: 10%;
     width: 70%;
     max-width: 300px;
     background-color: #000000;
@@ -168,8 +184,11 @@ time, mark, audio, video {
 .auctionDetailcurrentPriceAboveInput{
     font-size: 20px;
     color: #fff;
-    padding-top: 10px;
+    padding:5% 0 5% 0;
     height: 50%;
+    width: 100%;
+    text-align: center;
+    line-height: 100%;
 }
 
 .priceInput{
@@ -178,10 +197,12 @@ time, mark, audio, video {
     display: flex;
     flex-direction: column;
     padding: 0px;
+    height: 50%;
 }
 
 .priceInput input{
     width: 100%;
+    height: 100%;
     border:3px solid #000;
     text-align: center;
     align-self: center;
@@ -190,8 +211,9 @@ time, mark, audio, video {
 }
 
 .auctionDetailButton{
-    margin: 10px 0 0 0;
-    width: 200px;
+    margin: 5% 0 0 0;
+    width: 70%;
+    max-width: 300px;
     height: 52px;
     background-color: #1D0AFF;
     color: #fff;
@@ -200,11 +222,14 @@ time, mark, audio, video {
 
 
 @media screen and (max-width: 900px){
-    .countdown{
-        font-size: 30px;
+    .auctionDetailcountdown{
+        font-size: 1.2rem;
     }
-
+    .auctionDetailcountdown span{
+        font-size: 2rem;
+    }
 }
+
 
 @media screen and (max-width: 576px){
 
