--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -73,17 +73,14 @@ $egreylt: #E8E8E8;
     }
 }
 
-.ed-commu-btn{
-    button{
-        height: 50px;
-        font-size: 1.5rem;
-        text-align: center;
-        color: white;
-        background-color: transparent;
-        border: 2px solid white;
+.ed-commu-btn button{
+    height: 50px;
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+    background-color: transparent;
+    border: 2px solid white;
 
-    }
-    
 }
 
 .ed-detail-btn{
