--- a/src/pages/event/style/WorkshopShare.scss
+++ b/src/pages/event/style/WorkshopShare.scss
@@ -97,6 +97,7 @@ $egreylt: #E8E8E8;
     border: 2px solid #707070;
     }
     h6{
+    color: black;
     font-size: 1.3rem;
     font-weight: 500;
     }
