--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -55,11 +55,16 @@
   width: 130px;
   height: 50px;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 20px;
+  font-size: 1.6rem;
   color: #000;
   background-color: #e8e8e8;
   border: 2px solid #000;
   border-radius: 0px;
+  &:hover{
+    .u-link1 {
+      color: #fff;
+    }
+  }
 }
 
 .u-editBtn > .btn-outline-dark:hover,
@@ -72,7 +77,6 @@
 
 .u-editBtn {
   margin-top: 20px;
-  
 }
 
 .u-userData {
@@ -96,24 +100,14 @@
   }
 }
 
-.u-form1 > select {
-  width: 100%;
-  height: 50px;
-  background-color: #e8e8e8;
-  border: 2px solid #000;
-  font-family: 'Noto Sans TC', sans-serif;
-  font-size: 16px;
-  margin-top: 5px;
-}
-
 .u-form1 > label {
   font-family: 'Noto Sans TC';
-  font-size: 18px;
+  font-size: 1.5rem;
   margin-top: 10px;
 }
 
 .u-Select > select {
-  width: 17vw;
+  width: 50%;
   height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
@@ -121,10 +115,11 @@
   margin-top: 5px;
   font-size: 1rem;
   font-weight: normal;
-}
-
-.u-sel2 {
-  margin-left: 14px;
+  &:focus {
+    outline: none !important;
+    border: 2px solid #1d0aff;
+    background-color: #e8e8e8;
+  }
 }
 
 .u-sel1,
@@ -143,32 +138,32 @@
 // ===== checkbox 樣式 =====
 .u-gender-ckb > label {
   font-family: 'Noto Sans TC';
-  font-size: 18px;
+  font-size: 1.5rem;
   margin-top: 10px;
-  margin-right: 5px;
+  margin-right: 0.5vw;
 }
 
 .u-gender-box > label {
   font-family: 'Noto Sans TC';
-  font-size: 18px;
-  margin-right: 50px;
+  font-size: 1.5rem;
+  margin-right: 1vw;
 }
 
 .u-gender-box > input[type='checkbox'] {
-  width: 25px;
-  height: 25px;
+  width: 22px;
+  height: 22px;
   border: 2px solid #000;
-  padding-top: 10px;
-  margin-top: 10px;
+  // padding-top: 10px;
+  margin-top: 0.7vw;
   cursor: pointer;
   position: relative;
-  margin-left: 50px;
+  margin-left: 3vw;
 }
 
 .u-gender-box > input[type='checkbox']:after {
   position: absolute;
-  width: 25px;
-  height: 25px;
+  width: 22px;
+  height: 22px;
   top: 0;
   content: ' ';
   background-color: #e8e8e8;
@@ -181,6 +176,6 @@
 
 .u-gender-box > input[type='checkbox']:checked:after {
   content: '✓';
-  font-size: 20px;
+  font-size: 18px;
   background-color: #000;
 }
