--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -30,7 +30,7 @@ font-face {
 }
 .proDe-rightSide{
     width: calc(50vw - 35px);
-    height: 1500px;
+    height: 2000px;
     background-color: black;
 }
 
@@ -299,3 +299,36 @@ font-family: notoSansTC-Medium;
     color: white;
 
 }
+/* -------------commentSarea--------- */
+.proDe-commentsCard{
+    width: 100%;
+    padding-bottom: 28px;
+    border-bottom: 2px solid #8e8e8e;
+    align-items: center;
+    justify-content: space-between;
+}
+.proDe-commentsCardLeft{
+    width: 30%;
+    margin-top: 28px;
+}
+
+.proDe-userName, .proDe-userDate{
+    font-family:notoSansTC-Medium;
+    color: white;
+    margin-top: 10px;
+}
+.proDe-userName{
+    font-size: 1.2rem;
+}
+
+.proDe-commentsCardRight{
+    width: 65%;
+    margin-top: 28px;
+}
+.proDe-commentsContent{
+    
+}
+.proDe-commentsContent p{
+    color: white;
+    font-family: notoSansTC-Medium;
+} 
