--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -332,3 +332,7 @@ font-family: notoSansTC-Medium;
     color: white;
     font-family: notoSansTC-Medium;
 } 
+/* --------評論------- */
+.proDe-commentsName{
+    border: 1px solid #8e8e8e;
+}
