--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -337,6 +337,6 @@ font-family: notoSansTC-Medium;
     border: 1px solid #8e8e8e;
 }
 .proDe-lastWord{
-    font-family: notoSansTC-Regular;
+    font-family: notoSansTC-Medium;
     font-size: 1.1rem;
 }
