--- a/src/pages/event/style/EventMore.scss
+++ b/src/pages/event/style/EventMore.scss
@@ -30,9 +30,20 @@
     letter-spacing: 2px;
     }
     button{
+        font-size: .8rem;
         height: 100%;
         border: 0px;
         background-color: #A7A7A7;
+        color: white;
+    }
+}
+.e-more-card{
+    button:hover{
+        background-color: #1D0AFF;
+        color: #81FC4D;
+    }
+    button[className="col-8"]:hover{
+        background-color: #1D0AFF;
         color: white;
     }
 }
