--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -74,8 +74,9 @@ $egreylt: #E8E8E8;
 }
 
 .ed-commu-btn button{
+    width: 100%;
     height: 50px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-align: center;
     color: white;
     background-color: transparent;
@@ -203,6 +204,12 @@ $egreylt: #E8E8E8;
     }
 
     
+
+}
+
+.e-ticket-type:hover{
+    color: white;
+    background-color: black;
 
 }
 
