--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -171,7 +171,13 @@
 }
 .pro-filterWord{
     font-family: notoSansTC-Medium;
+    
 }
+.pro-filterWordA{
+    font-family: notoSansTC-Medium;
+}
+
+
 
 
 /* ------------------productAndCategory------ */
@@ -211,6 +217,7 @@
     color:white;
     padding: 13px 0 0 20px;
     font-size: 1.5rem;
+    text-decoration:none;
 
 }
 
