--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -15,8 +15,8 @@
 
 .u-body {
   margin-right: 70px;
-  // width: calc(100% - 70px);
-  height: 150vh;
+  width: calc(100% - 70px);
+  height: 100%;
   background-color: #e8e8e8;
   padding: 0 10vw;
   font-family: NotoSansTC;
