--- a/src/pages/user/styles/WorkShop.scss
+++ b/src/pages/user/styles/WorkShop.scss
@@ -2,10 +2,10 @@
 .u-userEve1, .u-userWshop1 {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 100%;
-    height: 70px;
+    width: 22vw;
+    height: 60px;
     text-align: center;
-    line-height: 70px;
+    line-height: 60px;
 }
 
 .u-userWshop1 {
@@ -14,14 +14,16 @@
 
 .u-userWshop1 > a {
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: #fff;
     text-decoration: none;
+    letter-spacing: 0.3rem;
   }
   
   .u-userEve1 > a {
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: #000;
     text-decoration: none;
+    letter-spacing: 0.3rem;
   }
