--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -1,6 +1,6 @@
 // ----- 麵包屑 -----
 .u-breadcrumb {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 // ===== Menu =====
@@ -10,20 +10,21 @@
 
 // ----- 大標 -----
 .u-row {
-  margin-top: 30px;
-  width: 74vw;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
+  padding: 10px 0 10px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: center;
 }
 
 .u-usertitleLeft1,
 .u-usertitleRight1 {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 100%;
-  height: 70px;
+  width: 22vw;
+  height: 60px;
   text-align: center;
-  line-height: 70px;
+  line-height: 60px;
 }
 
 .u-usertitleLeft1 {
@@ -31,10 +32,10 @@
 }
 
 .u-usertitleRight1 > a {
-  font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
+  font-size: 2rem;
   color: #000;
-  text-decoration: none;
+  letter-spacing: 0.3rem;
+
 }
 
 .u-usertitleLeft1 {
@@ -42,10 +43,9 @@
 }
 
 .u-usertitleLeft1 > a {
-  font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
-  color: #fff;
-  text-decoration: none;
+  font-size: 2rem;
+  color: white;
+  letter-spacing: 0.3rem;
 }
 
 /* =====btn 自訂顏色===== */
@@ -115,6 +115,7 @@
   margin-top: 5px;
   font-size: 1rem;
   font-weight: normal;
+  border-radius: 0px;
   &:focus {
     outline: none !important;
     border: 2px solid #1d0aff;
