--- a/src/pages/user/styles/OrderTic.scss
+++ b/src/pages/user/styles/OrderTic.scss
@@ -1,17 +1,18 @@
 .u-userPro1, .u-userTic1 {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 100%;
-    height: 70px;
+    width: 22vw;
+    height: 60px;
     text-align: center;
-    line-height: 70px;
+    line-height: 60px;
 }
 
 .u-userTic1 > a{
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color:#fff;
     text-decoration: none;
+    letter-spacing: 0.3rem;
 }
 
 .u-userTic1 {
@@ -20,7 +21,8 @@
 
 .u-userPro1 > a { 
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: #000;
     text-decoration: none;
+    letter-spacing: 0.3rem;
 }
