--- a/src/pages/user/styles/PwdEdit.scss
+++ b/src/pages/user/styles/PwdEdit.scss
@@ -21,10 +21,10 @@
 .u-usertitleLeft, .u-usertitleRight {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 100%;
-  height: 70px;
+  width: 22vw;
+  height: 60px;
   text-align: center;
-  line-height: 70px;
+  line-height: 60px;
 }
 
 .u-usertitleRight {
@@ -33,14 +33,16 @@
 
 .u-usertitleRight > a{
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
+  font-size: 2rem;
   color:#fff;
   text-decoration: none;
+  letter-spacing: 0.3rem;
 }
 
 .u-usertitleLeft > a { 
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
+  font-size: 2rem;
   color: #000;
   text-decoration: none;
+  letter-spacing: 0.3rem;
 }
