--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -11,10 +11,10 @@
 .u-userEve, .u-userWshop {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 100%;
-    height: 70px;
+    width: 22vw;
+    height: 60px;
     text-align: center;
-    line-height: 70px;
+    line-height: 60px;
 }
 
 .u-userEve {
@@ -23,9 +23,10 @@
 
 .u-userWshop > a {
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: #000;
     text-decoration: none;
+    letter-spacing: 0.3rem;
   }
   
   .u-userEve {
@@ -34,9 +35,10 @@
   
   .u-userEve > a {
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: #fff;
     text-decoration: none;
+    letter-spacing: 0.3rem;
   }
 
   // ===== 票卷內容 =====
