--- a/src/pages/user/styles/UserMyFav.scss
+++ b/src/pages/user/styles/UserMyFav.scss
@@ -5,12 +5,12 @@
 .u-Myfavtitle4 {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 100%;
-    height: 70px;
+    width: 20vw;
+    height: 60px;
     text-align: center;
-    line-height: 70px;
+    line-height: 60px;
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
 }
 
 .u-Myfavtitle1 {
@@ -19,10 +19,12 @@
 
 .u-Myfavtitle1 > a {
     color: #fff;
+    letter-spacing: 0.3rem;
 }
 
 .u-Myfavtitle2 > a,
 .u-Myfavtitle3 > a,
 .u-Myfavtitle4 > a{
     color: #000;
+    letter-spacing: 0.3rem;
 }
