--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -14,12 +14,11 @@
 }
 
 .u-body {
-  margin-right: 70px;
+  font-family: 'Noto Sans TC Medium', sans-serif;
   width: calc(100% - 70px);
-  height: 100%;
+  height: 150vh;
   background-color: #e8e8e8;
   padding: 0 10vw;
-  font-family: NotoSansTC;
 }
 
 //----- carousel -----
