--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -111,10 +111,9 @@
   height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
-  margin-bottom: 20px;
-  margin-top: 5px;
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: 1rem;
-  font-weight: normal;
+  margin-top: 5px;
   border-radius: 0px;
   &:focus {
     outline: none !important;
