--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -89,7 +89,7 @@
 
 .u-membertile > p {
   font-family: EngraversBold;
-  font-size: 3rem;
+  font-size: 3.5rem;
   letter-spacing: 5px;
   // margin-left: -30px;
 }
@@ -98,7 +98,6 @@
 
 .u-addbutton {
   width: 100%;
-  // width:35vw;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
 }
@@ -114,7 +113,7 @@
 
 .u-loginbtn1 > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
+  font-size: 2.5rem;
   color: #000;
   text-decoration: none;
 }
@@ -131,7 +130,7 @@
 
 .u-addbtn1 > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 30px;
+  font-size: 2.5rem;
   color: #fff;
   text-decoration: none;
 }
@@ -143,6 +142,8 @@
   height: 90px;
   border-bottom: 2px solid #000;
   font-size: 60px;
+  padding: auto;
+  margin: auto;
 }
 
 .u-g {
@@ -192,13 +193,13 @@
   color: #fff;
   display: inline-block;
   visibility: visible;
-  padding: 0px 4px;
+  padding: 0px 3px;
   border: 2px solid #000;
 }
 
 .u-checkbox > input[type='checkbox']:checked:after {
   content: '✓';
-  font-size: 18px;
+  font-size: 17px;
   background-color: #000;
 }
 
