--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -54,23 +54,13 @@
   padding-right: 2rem;
 }
 
-/* ----- select 箭頭樣式 ----- */
-// .u-progressSelect > select {
-//     padding-left: 5px;
-//     padding-top: 1px;
-//     width: 90px;
-//     height: 50px;
-//     background-color: #e8e8e8;
-//     border: 2px solid #000;
-// }
-
 /* ----- 訂單 ----- */
 .u-table {
     margin-top: 20px;
     width: 100%;
     height: 195px;
     border: 2px solid #707070;
-    font-size: 16px;
+    font-size: 1.5rem;
     font-family: NotoSansTC-Medium;
 }
 
@@ -92,7 +82,7 @@
     background-color: #e8e8e8;
     border-color: #000;
     position: absolute;
-    top: 40px;
+    top: 30px;
 }
 
 .u-Lbtn > .btn-light:hover,
@@ -115,7 +105,7 @@
     background-color: #000;
     border-color: #000;
     position: absolute;
-    bottom: 15px;
+    bottom: 20px;
     }
 
 .u-Bbtn > .btn-dark:hover,
