--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -60,7 +60,7 @@
     width: 100%;
     height: 195px;
     border: 2px solid #707070;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: NotoSansTC-Medium;
 }
 
@@ -74,15 +74,16 @@
 /* ----- 取消 btn ----- */
 .u-Lbtn > .btn-light {
     margin-bottom: 20px;
-    width: 10vw;
+    width: 150px;
     height: 50px;
-    font-size: 1.5rem;
+    font-size: 18px;
     font-family: 'Noto Sans TC', sans-serif;
     color: #000;
     background-color: #e8e8e8;
     border-color: #000;
     position: absolute;
     top: 30px;
+    border-radius: 0px;
 }
 
 .u-Lbtn > .btn-light:hover,
@@ -96,16 +97,17 @@
 /* ----- 詳細資料 btn ----- */
 
 .u-Bbtn > .btn-dark {
-    width: 10vw;
+    width: 150px;
     height: 50px;
     font-family: 'Noto Sans TC', sans-serif;
-    font-size: 1.5rem;
+    font-size: 18px;
     /* margin-left: 150px; */
     color: #fff;
     background-color: #000;
     border-color: #000;
     position: absolute;
     bottom: 20px;
+    border-radius: 0px;
     }
 
 .u-Bbtn > .btn-dark:hover,
