--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -67,7 +67,7 @@
 }
 
 .u-myEVAL {
-    width: 10vw;
+    width: 150px;
     height: 43px;
     background-color: #1D0AFF;
     text-align: center;
@@ -75,7 +75,7 @@
     margin-top: 5px;
     margin-left: -15px;
     font-family: NotoSansTC-Medium;
-    font-size: 1.5rem;
+    font-size: 18px;
     border-radius: 0px;
 }
 
@@ -103,7 +103,7 @@
 
 // ===== 前往評價 btn =====
 .u-goEVAL {
-    width: 10vw;
+    width: 150px;
     height: 43px;
     border: 2px solid #000;
     line-height: 40px;
@@ -111,7 +111,7 @@
     margin-top: -42px;
     margin-left: 150px;
     font-family: NotoSansTC-Medium;
-    font-size: 1.5rem;
+    font-size: 18px;
 }
 
 .u-goEVAL > a {
