--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -112,7 +112,7 @@
 
 .u-loginbtn1 > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 2.5rem;
+  font-size: 30px;
   color: #000;
   text-decoration: none;
 }
@@ -129,7 +129,7 @@
 
 .u-addbtn1 > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 2.5rem;
+  font-size: 30px;
   color: #fff;
   text-decoration: none;
 }
@@ -138,7 +138,7 @@
 
 .u-gf {
   width: 100%;
-  height: 94px;
+  height: 90px;
   border-bottom: 2px solid #000;
   font-size: 60px;
   padding: auto;
