--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -27,7 +27,7 @@
 
 .u-loginbtn > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 2.5rem;
+  font-size: 30px;
   color: #fff;
   text-decoration: none;
 }
@@ -43,7 +43,7 @@
 
 .u-addbtn > a {
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 2.5rem;
+  font-size: 30px;
   color: #000;
   text-decoration: none;
 }
