--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -52,12 +52,12 @@
 
 /* =====btn 自訂顏色===== */
 .u-editBtn > .btn-outline-dark {
-  margin-left: 8vw;
+  margin-left: 12vw;
   margin-bottom: 30px;
   width: 130px;
   height: 50px;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 1.6rem;
+  font-size: 18px;
   color: #000;
   background-color: #e8e8e8;
   border: 2px solid #000;
@@ -87,12 +87,12 @@
 
 // ----- input 樣式 -----
 .u-form1 > input {
-  width: 50%;
+  width: 35vw;
   height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   margin-top: 5px;
   border-radius: 0px;
   &:focus {
@@ -104,17 +104,17 @@
 
 .u-form1 > label {
   font-family: 'Noto Sans TC';
-  font-size: 1.5rem;
+  font-size: 16px;
   margin-top: 10px;
 }
 
 .u-Select > select {
-  width: 50%;
+  width: 35vw;
   height: 50px;
   background-color: #e8e8e8;
   border: 2px solid #000;
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   margin-top: 5px;
   border-radius: 0px;
   &:focus {
@@ -140,14 +140,14 @@
 // ===== checkbox 樣式 =====
 .u-gender-ckb > label {
   font-family: 'Noto Sans TC';
-  font-size: 1.5rem;
+  font-size: 16px;
   margin-top: 10px;
   margin-right: 0.5vw;
 }
 
 .u-gender-box > label {
   font-family: 'Noto Sans TC';
-  font-size: 1.5rem;
+  font-size: 16px;
   margin-right: 1vw;
 }
 
