--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -871,13 +871,14 @@ width:100%;
 .pro-gray6{
     background-color: #E8E8E8;
     z-index: 0;
+    margin-bottom: -10px;
 }
 .pro-bottomGif{
     position: relative;
 }
 .pro-gray6 img{
     width:100%;
-    margin-top:39%;
+    margin-top:38%;
 }
 .homepage6-wordA{
     font-family: Engravers;
