--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -29,7 +29,7 @@
 
 .u-progress{
     margin-top: 20px;
-    width: 13.5vw;
+    width: 200px;
     height: 50px;
     font-size: 1rem;
     font-weight: normal;
@@ -106,7 +106,7 @@
     background-color: #000;
     border-color: #000;
     position: absolute;
-    bottom: 20px;
+    bottom: 30px;
     border-radius: 0px;
     }
 
