--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -29,7 +29,7 @@
 
 .u-progress{
     margin-top: 20px;
-    width: 200px;
+    width: 15vw;
     height: 50px;
     font-size: 1rem;
     font-weight: normal;
@@ -51,7 +51,7 @@
   background-position-x: 100%;
   background-position-y: 50%;
   border: 0px;
-  padding-right: 2rem;
+  padding-right: 6.5rem;
 }
 
 /* ----- 訂單 ----- */
