--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -110,17 +110,16 @@
     .news-slogen{
         position: relative;
         background-color: #E8E8E8;
-        z-index: 1;
+        z-index: 0;
     }
     .news-slogen h1{
         font-family: Engravers;
         font-size:3vw;
-        background-color: #E8E8E8;
     }
 
     .news-hl{
         position:absolute;
-        z-index: 0;/*TODO: Zindex not working*/
+        z-index: -1;/*TODO: Zindex not working*/
         top:43%;
         left:35%;
         width: 30%;
@@ -145,7 +144,6 @@
     /*FIXME:*/
     .news{
         overflow:hidden;
-
         position: relative;
     }
 
@@ -162,7 +160,7 @@
         text-align: center;
         background-color: #000;
         color: #81FC4D;
-        font-size: 1.2rem;
+        font-size: 1.7vw;
         font-weight: bold;
         position: absolute;
         top:50%;
@@ -207,13 +205,13 @@
 
     .artist-title-tc{
         margin-top: 30px;
-        font-size: 1.5rem;
+        font-size: 1.5vw;
     }
 
     .artist-title-tc span {
-        font-size: 1.5rem;
+        font-size: 1.5vw;
         padding-left: 9em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: notoSansTC;
         color: #81FC4D;
         position: relative;
     }
@@ -283,11 +281,13 @@
     }
 
     .eventicon{
-        position: relative;
-        
-        
-        .event-eye{width: 70%;
-            }
+        height: 320px;
+        // position: relative;
+
+        .event-eye{
+            width: 70%;
+            position: relative;
+        }
 
         .event-eye2{
             width: 40%;
@@ -326,13 +326,13 @@
     
     
     .event-title-tc{
-        font-size: 1.5rem;
+        font-size: 1.5vw;
     }
 
     .event-title-tc span {
-        font-size: 1.5rem;
+        font-size: 1.5vw;
         padding-left: 9em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: notoSansTC;
         color: #000;
         position: relative;
     }
@@ -366,7 +366,8 @@
     }
 
     .product-cute{
-        width: 100%;
+        margin:0 auto;
+        width: 1174px;
         position: relative;
     }
 
@@ -427,13 +428,13 @@
         position: absolute;
         top:20%;
         left: 30%;
-        font-size: 1.5rem;
+        font-size: 1.5vw;
     }
 
     .product-title-tc span {
-        font-size: 1.5rem;
+        font-size: 1.5vw;
         padding-left: 9em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: notoSansTC;
         color: #000;
         position: relative;
     }
@@ -544,7 +545,7 @@
     .auction-title-tc span {
         font-size: 1.5rem;
         padding-left: 9em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: notoSansTC;
         color: #000;
         position: relative;
     }
