--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -281,7 +281,8 @@
     }
 
     .eventicon{
-        height: 320px;
+        width: 100%;
+        height: 100%;
         // position: relative;
 
         .event-eye{
