--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -272,7 +272,19 @@
 
     .event-slogan{
         padding-top: 500px;
+
+        button{
+            background: #000;
+            color: #E8E8E8;
+            border:none;
+        }
+        button:hover{
+            background: #1D0AFF;
+            color: #E8E8E8;
+            border:none;
+        }
     }
+
     .event-slogan h1{
         font-family: Engravers;
         font-size:5vw;
