--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -199,7 +199,7 @@
 
 }
 .homepageB-right{
-    background-color:rgb(129, 189, 39);
+    background-color:white;
     height: 100vh;
     width: 44vw;
     overflow: scroll;
