--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -303,8 +303,12 @@
         top: 50%;
         left: 45%;
     }
+    .pro-arrowC{
+        width: 100%;
+    }
     .homepageA-boxScrollBox{
        margin-top: 5%;
+       margin-bottom: 5%;
     }
 }
 
