--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -222,7 +222,7 @@
 // 註冊、登入按鈕
 
 .u-AddBtn {
-  margin-left: 10vw;
+  margin-left: 38%;
   margin-top: 50px;
   text-align: center;
   line-height: 45px;
