0705 cart: scss fix

--- a/src/pages/cart/styles/cart-payment.scss
+++ b/src/pages/cart/styles/cart-payment.scss
@@ -62,16 +62,15 @@
 .c-lock {
   font-size: 12px;
 }
-.c-checkoutbtn1 {
+.c-checkoutbtn2 {
   width: 150px;
   height: 50px;
   background-color: #1d0aff;
-  p {
-    color: white;
-    letter-spacing: 0.3rem;
-    text-align: center;
-    line-height: 50px;
-  }
+  border: 0px;
+  color: white;
+  letter-spacing: 0.3rem;
+  text-align: center;
+  line-height: 50px;
 }
 .c-checkout1 {
   border-top: 2px solid black;
